fix issue where modals where not aligned with content

--- a/client/src/App.less
+++ b/client/src/App.less
@@ -7,6 +7,7 @@ html {
 
 body {
   background: rgba(#052c4c, 0.3);
+  width: 100% !important;
 
   @media screen and (min-width: 601px) {
     #layout {
